<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:src="@drawable/ic_close_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/to_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_ant_design_phone_filled" />

    <ImageButton
        android:id="@+id/to_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_ant_design_mail_filled" />

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/img_1_lbl"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/to_message"
        app:layout_constraintStart_toEndOf="@+id/to_call"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/name_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_1" />

    <Button
        android:id="@+id/update_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/update_txt"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="350dp"
        android:layout_height="256dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/standard_margin"
        app:columnCount="2"
        app:layout_constraintBottom_toTopOf="@+id/update_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_txt"
        app:rowCount="4">

        <TextView
            android:id="@+id/feeling_lbl"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/feeling_lbl"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/status_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_lbl"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/steps_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps_lbl"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/covidtest_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/covid_lbl"
            app:layout_column="0"
            app:layout_row="3" />

        <ImageView
            android:id="@+id/feeling_emoji"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingStart="10dp"
            app:layout_column="1"
            app:layout_row="0"
            android:src="@drawable/happy" />

        <ImageView
            android:id="@+id/status_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@android:drawable/presence_online" />

        <EditText
            android:id="@+id/steps_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_column="1"
            app:layout_row="2" />

        <EditText
            android:id="@+id/covid_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_column="1"
            app:layout_row="3" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

